--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 # LightCheck
 
-## ∀ QuickCheck-based type-safe clone in F#
+LightCheck is a type-safe, F#, QuickCheck-based clone.
 
+  - Random generation is based on QuickCheck 1.2.0.1 and 2.8.2.
+  - Shrinking of values is based on QuickCheck 2.8.2.
+  - Model-based testing is based on Erlang's QuickCheck 1.37.2.
