--- a/README
+++ b/README
@@ -5,3 +5,5 @@ LightCheck is a type-safe, F#, QuickCheck-based clone.
   - Random generation is based on QuickCheck 1.2.0.1 and 2.8.2.
   - Shrinking of values is based on QuickCheck 2.8.2.
   - Model-based testing is based on Erlang's QuickCheck 1.37.2.
+
+LightCheck is currently a work in progress.
